fixed text wrap inside of notebox

--- a/lambdanotes/src/App.less
+++ b/lambdanotes/src/App.less
@@ -19,6 +19,10 @@
         color: #4a4a4a;
         font-size: 27px;
         box-sizing: border-box;
+        h1 {
+            margin-left: 20px;
+            line-height: 80%;
+        }
         a {
             margin-left: auto;
             margin-right: auto;
