--- a/lambdanotes/src/Components/newnote.less
+++ b/lambdanotes/src/Components/newnote.less
@@ -15,6 +15,8 @@
         .formBox1 {
             width: 400px;
             height: 50px;
+            overflow-wrap: normal;
+            word-wrap: break-word;
         }
 
         .formBox2 {
