--- a/lambdanotes/src/Components/notes.less
+++ b/lambdanotes/src/Components/notes.less
@@ -31,9 +31,12 @@
         height: 50px;
     }
     .singleNote {
+        overflow: hidden;
         display: flex;
         flex-flow: row wrap;
         justify-content: space-around;
+        word-wrap: break-word;
+        text-overflow: ellipsis;
         margin-top: 15px;
         .listBox {
         align-self: flex-start;
