--- a/lambdanotes/src/Components/viewnote.less
+++ b/lambdanotes/src/Components/viewnote.less
@@ -1,4 +1,27 @@
-
+#noteView {
+    button {
+        border: none;
+        background: #f3f3f3;
+        font-size: 16px;
+        text-decoration: none;
+        a {
+            text-decoration: none;
+            color: #000000;
+        }
+        a:link {
+            text-decoration: none;
+            color: #000000;
+        }
+        a:hover {
+            text-decoration: none;
+            color: #000000;
+        }
+        a:visited {
+            text-decoration: none;
+            color: #000000;
+        }
+    }
+}
 .modalWindow {
     display: flex;
     flex-flow: row wrap;
